objects/LLC_BI__Ownership_Structure_Type__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Applicable_States__c</fullName>
        <description>Administrators populate this multi-select picklist to select an Ownership Structure Type based on the selection of the State field on the Branch object.</description>
        <inlineHelpText>Select a State to select an Ownership Structure Type.</inlineHelpText>
        <label>Applicable States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__US_States_Abbreviated</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is required and manually entered during the configuration of Ownership Structure Types, which are used during the New Deposit Workflow. This field indicates a category that relates to a type of legal entity.</description>
        <inlineHelpText>Type of account this ownership type relates to</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.html</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This system-populated field displays the unique identifier for Ownership Structure Type</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Ownership Structure Type</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Ownership Structure Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ownership Structure Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>